--- a/Connect Four with Visible AI Thinking/MainPage.xaml
+++ b/Connect Four with Visible AI Thinking/MainPage.xaml
@@ -7,7 +7,14 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    </Grid>
+    <StackPanel x:Name="rootPanel" Orientation="Horizontal" Margin="20" Background="Yellow">
+        <StackPanel x:Name="settingsPanel" Orientation="Vertical" Background="Red">
+
+        </StackPanel>
+
+        <Grid x:Name="boardGrid" Background="Blue">
+
+        </Grid>
+    </StackPanel>
 </Page>
