User can now place chips

--- a/Connect Four with Visible AI Thinking/MainPage.xaml
+++ b/Connect Four with Visible AI Thinking/MainPage.xaml
@@ -13,7 +13,7 @@
 
         </StackPanel>
 
-        <Grid x:Name="boardGrid" Background="Black">
+        <Grid x:Name="boardGrid" Background="Black" Tapped="OnBoardTapped">
 
         </Grid>
     </StackPanel>
