--- a/Connect Four with Visible AI Thinking/MainPage.xaml
+++ b/Connect Four with Visible AI Thinking/MainPage.xaml
@@ -18,7 +18,7 @@
                 <TextBlock x:Name="StatusText1" FontSize="20" Text="Status: " Foreground="Black" />
                 <TextBox x:Name="StatusText2" FontSize="20" Text="Your turn" Foreground="Red" Background="Black" IsReadOnly="True" />
             </StackPanel>
-            <Button x:Name="RestartButton" Content="Restart (clear board)" Tapped="RestartButton_Tapped" />
+            <Button x:Name="RestartButton" Content="Restart (clear board)" Tapped="RestartButton_Tapped" HorizontalAlignment="Center" Margin="0,10,0,0" Background="Green" Foreground="White" FontWeight="Bold"/>
         </StackPanel>
 
         <Grid x:Name="boardGrid" Background="Black" Tapped="OnBoardTapped">
