Implemented, not really working

--- a/Connect Four with Visible AI Thinking/MainPage.xaml
+++ b/Connect Four with Visible AI Thinking/MainPage.xaml
@@ -14,6 +14,7 @@
             <CheckBox x:Name="ShowThinkingCheckbox" Content="Show AI Thinking" IsChecked="True" Checked="ShowThinkingCheckbox_Checked" Unchecked="ShowThinkingCheckbox_Unchecked" />
             <Slider x:Name="StateDelaySlider" Header="AI State Eval Sleep Delay (ms)" Width="100" Minimum="0" Maximum="250" Value="10" TickFrequency="1" ValueChanged="StateDelaySlider_ValueChanged" />
             <CheckBox x:Name="ShowColVals" Content="Show AI Column Values" IsChecked="True" Checked="ShowColVals_Checked"  Unchecked="ShowColVals_Unchecked" />
+            <CheckBox x:Name="UsePruningButton" Content="Use alpha-beta pruning" IsChecked="False" Checked="UsePruningButton_Checked" Unchecked="UsePruningButton_Unchecked" />
             <StackPanel Orientation="Horizontal">
                 <TextBlock x:Name="StatusText1" FontSize="20" Text="Status: " Foreground="Black" />
                 <TextBox x:Name="StatusText2" FontSize="20" Text="Your turn" Foreground="Red" Background="Black" IsReadOnly="True" />
